# main

./: .dockerignore  .gcloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/sql/: README.md  control_baseline.sql  dataplane_template.sql
backend/alembic/versions/: 0001_control_baseline.py  0002_story_subscores.py  0003_evidence_source_attrs.py  0004_trend_signals_envelope.py  0005_benchmark_table.py  0006_ingest_source_registry.py  0007_vendor_impact_score.py  0008_digest_envelope.py  0009_admin_grants.py  0010_sow_tables.py  0011_jira_only_analysis_view.py  0012_multi_subcap_carry.py  0013_story_delivered_at.py  0013_story_use_case_link.py  0014_kg_edge_detail.py  0015_kg_edge_directional.py  0016_enrichment_relevance.py  0017_story_client.py  0018_story_synthesis.py  0019_story_synthesis_cache.py  0020_sv_rollup.py
backend/app/: __init__.py  _version.py  db.py  deps.py  errors.py  main.py  migrate.py  refresh.py  sessions.py  settings.py  versioning.py
backend/app/intelligence/: __init__.py  benchmarks.py  cost_meter.py  gates.py  gemini.py  model_config.py  news.py  retrieval.py  sow.py  vendors.py
backend/app/jobs/: __init__.py  schedule.py
backend/app/models/: __init__.py  common.py  enums.py  trust.py
backend/app/resilience/: __init__.py  retry.py
backend/scripts/: regen_stories_seed.py
backend/seed/: offerings.json
backend/tests/: conftest.py  proxy_sim.py  test_activate.py  test_api.py  test_auth.py  test_benchmarks.py  test_catalogue.py  test_change_flags.py  test_chat.py  test_cost_meter.py  test_diff.py  test_digest.py  test_enrichment_propagation.py  test_enrichment_relevance.py  test_enrichment_seed.py  test_evidence.py  test_gemini_live.py  test_governance.py  test_health.py  test_kg_codelivery.py  test_kg_directional.py  test_kg_layer_b.py  test_kg_semantic.py  test_migrate.py  test_offerings_match.py  test_provision.py  test_refresh.py  test_resilience_retry.py  test_scaffold.py  test_sources.py  test_sow.py  test_stories.py  test_story_insights.py  test_story_synthesis.py  test_subcap_xref.py  test_subverticals.py  test_suggestions.py  test_sv_aliases.py  test_trends.py  test_use_case_gaps.py  (+6 more)
(+200 files in other folders)
